###### TWE 5.5-1 RELEASED ######
2016-11-21 Sasa Bojanic <sasaboy@together.at>
   # Now configure script creates special rebranding.properties file if one wants to rebrand
   # Build procedure changed to copy rebranding.properties file (if exists) from project folder called "customdir" (if exists)
     This feature will be used in our new GPE project 

###### TWE 5.4-2 RELEASED ######
2016-10-14 Sasa Bojanic <sasaboy@together.at>
   # Now making text-panels non-editable and changing color to look like disabled. This way we can copy things from external package panels.

2016-10-05 Sasa Bojanic <sasaboy@together.at>
   # Fixed linux configure script to be able to set parameters with whitespace character

2016-09-08 Sasa Bojanic <sasaboy@together.at>
   # Fixed issue when transition is selected when clicked on the activity

###### TWE 5.4-1 RELEASED (2016-08-06) ######
2016-07-25 Sasa Bojanic <sasaboy@together.at>
   # External package relative path references on windows are now written using "/" character as file separator so 
     XPDL with external packages can be used cross-platform
   # Fix: now properly removing ActivitySet's Pools, Artifacts and Associations when deleting their WorkflowProcess container 
   
2016-07-25 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: SharkDisplayGenerator differently present WorkflowProcess name in GUI (category variable value information is appended)

2016-07-20 Sasa Bojanic <sasaboy@together.at>
   # Changed StandardDisplayGenerator to differently present package name in GUI
   # Shark mode: Introduced SharkDisplayGenerator to differently present package name in GUI

2016-07-02 Sasa Bojanic <sasaboy@together.at>
   # Now also calculating references to variables in the Lane's performer element

2016-06-29 Sasa Bojanic <sasaboy@together.at>
   # Improved validation for XPath tool agent

2016-06-10 Sasa Bojanic <sasaboy@together.at>
   # Now explicitly using XALAN for transformations (problem with saxon and namespaces)
