@@ -24,6 +24,6 @@
       <ExtendedAttribute Name="CHECK_FOR_CONTINUATION" Value="false"/>
       <ExtendedAttribute Name="CHOOSE_NEXT_PERFORMER" Value="false"/>
       <ExtendedAttribute Name="ENABLE_REASSIGNMENT" Value="true"/>
-      <ExtendedAttribute Name="IS_WEBDAV_FOR_ACTIVITY_VISIBLE" Value="false"/>
+      <ExtendedAttribute Name="IS_WEBDAV_FOR_ACTIVITY_VISIBLE" Value="true"/>
    </ExtendedAttributes>
 </Activity>
